deploy/k8s/overlays/example/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hyeboard
  labels:
    hyeboard.io/monitoring: "true"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
